========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-02-23

  - Fixed #219: Restored sorting of the entries in the extractor. File order
    will have to be maintained by extracting the line no, which is used as a
    secondary key.


2018-02-19

  - Added prototype for converting Google Docs doc from docx and rst
    conversions, using the docx blocks to insert indented versions in the rst
    file.

  - Removed deprecated beancount.ops.prices module.


2018-02-17

  - Added an option to the CSV importer for the string separating the narration
    (default: "; ").

  - Merged a change submitted by @droogmic to add options for the dateutils
    parser, in order to disambiguate between day-first (DD-MM-YYYY) vs.
    month-first (MM-DD-YYYY) date representations.

  - Created a new plugin "check_closing" that automatically inserts a zero
    balance check after postings which are known - and flagged, using metadata -
    to be closing trades.

  - Fixed bug in "sellgains" plugin whereby a price of zero units failed an
    assertion. Added a test.


2018-02-12

  - Added a side-effects local variable saver utility for writing importers.

  - Fixed #212: Clarified error message for error in covering non-aggregate
    targets.

  - The Importer.extract() method now accepts a new parameters with the prior
    entries (or None, if not specified) as 'existing_entries'. It's free to use
    that as it pleases in order to flag entries as duplicates. The entries
    returned by Importer.extract() will be checked for __duplicate__ metadata
    and automatically inserted to that set if it is present. This allows the
    importer to return some duplicate entries for context - which will be
    rendered as such in the output, e.g. commented out - without having to
    necessarily throw them away.

    (The previous signature is still supported in order to avoid breaking