@@ -4,6 +4,12 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2018-03-02
+
+  - Made the 'readline' library conditional, for Windows support.
+    See PR46.
+
+
 2018-02-23
 
   - Fixed #219: Restored sorting of the entries in the extractor. File order
